tests/ui/fail/custom_derive_empty_generics_parameters.stderr
error: Please provide generics arguments, or omit the '<>' for the default derive.
 --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:3:22
  |
3 | #[nnn(nnn_derive(Into<>))]
  |                      ^^

error: Please provide generics arguments, or omit the '<>' for the default derive.
 --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:5:22
  |
5 | #[nnn(nnn_derive(From<>))]
  |                      ^^

error: Please provide generics arguments, or omit the '<>' for the default derive.
 --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:7:25
  |
7 | #[nnn(nnn_derive(TryFrom<>))]
  |                         ^^

error: Please provide generics arguments, or omit the '<>' for the default derive.
 --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:9:24
  |
9 | #[nnn(nnn_derive(Borrow<>))]
  |                        ^^

error: Please provide generics arguments, or omit the '<>' for the default derive.
  --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:11:23
   |
11 | #[nnn(nnn_derive(AsRef<>))]
   |                       ^^

error: Please provide generics arguments, or omit the '<>' for the default derive.
  --> tests/ui/fail/custom_derive_empty_generics_parameters.rs:13:23
   |
13 | #[nnn(nnn_derive(Deref<>))]
   |                       ^^
